# mayo-rust

./: .gitignore  Cargo.toml
mayo-zig/: build.zig
mayo-zig/.zig-cache/o/2c9e8e850782ba997aade6c9048b916e/: test
mayo-zig/cmd/mayo-cli/: main.zig
mayo-zig/src/: aes_ctr.zig  api.zig  codec.zig  gf.zig  hash.zig  keygen.zig  lib.zig  matrix.zig  params.zig  sign.zig  solver.zig  spacetime_hash.zig  types.zig  verify.zig
mayo-zig/test/: kat_test.zig
pkg/: identity.d.ts  identity.js  identity_bg.wasm  identity_bg.wasm.d.ts  package.json
src/: aes_ctr.rs  api.rs  codec.rs  gf.rs  hash.rs  keygen.rs  lib.rs  matrix.rs  params.rs  sign.rs  solver.rs  spacetime_hash.rs  types.rs  verify.rs
webexample/: index.html
