[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mayo = "*"
blake2 = "0.10"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
sha3 = "*"
aes = "0.8.3"
ctr = "0.9.2"
getrandom = "0.2"
